[package]
name = "downloader"
version = "0.1.0"
edition = "2021"
authors = ["Daniyal Ahmad Rizaldhi <daniyal.ahmadrizaldhi@gmail.com>"]

[workspace.package]
authors = ["Daniyal Ahmad Rizaldhi <daniyal.ahmadrizaldhi@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "cli",
    "api"
]

[dependencies]
reqwest = { version="0.11.12", features=["json","rustls-tls"] }
urlencoding = "2.1.2"

[workspace.dependencies]
clap = { version="4.0.23", features=["derive"] }