[package]
name = "api"
version = "0.1.0"
edition = "2021"
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version="1.0.147", features=["derive"] }
serde_json = "1.0.87"
futures = "0.3.25"
downloader = { path="../" }
clap = { workspace=true }